MS-34: fixed overflow on postulant form

--- a/src/Components/Postulants/postulants.module.css
+++ b/src/Components/Postulants/postulants.module.css
@@ -110,7 +110,7 @@
 	border: 1px solid #FDC800;
 }
 
-button {
+/* button {
 	box-sizing: border-box;
 	width: 100%;
 	max-width: 400px;
@@ -121,4 +121,4 @@ button {
 	border-right-style: none;
 	border-left-style: none;
 	color: #fff;
-}
+} */
